public/css/styles.css
/******* Change Box Model ***************/
*,
*:before,
*:after {
  box-sizing: border-box;
}

* {
  margin: 0;
  padding: 0;
  font-family: "Roboto", sans-serif;
  font-style: normal;
}

h1 {
  font-family: "Archivo Black", system-ui;
  font-weight: 600;
  font-style: normal;
}

a {
  text-decoration: none;
  color: rgb(255, 255, 255)
}

button {
  font-size: 16px;
}

/*Navigation*/

nav {
  background-color: #583d19
}

nav ul {
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  align-items: center;
  list-style: none
}

nav ul li {
  flex-grow: 1;
  text-align: center
}

nav a {
  display: block;
  color: #eee;
  padding: 0.75rem;
  text-align: center;
  transition: all 0.3s ease
}

nav ul li a:hover {
  background-color: rgb(24, 24, 24);
  transition: all 0.3s ease
}

/*Footer*/

footer a {
  color: #8f2917;
}

/*Header*/

#top-header {
  height: 80px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-left: 1rem;
  margin-right: 1rem;
}

header a {
  color: black;
}

header a:hover {
  color: #441e97;
}

.siteName a {
  font-size: 2.5rem;
  font-weight: 800;
}

/*Hero Image*/

.hero {
  position: relative;
  overflow: hidden;
  padding: 4rem;
}

.hero h1 {
  font-size: 2rem;
  font-weight: 800;
}

.hero img {
  width: 100%;
  height: auto;
  display: block;
}

.hero-content {
  position: absolute;
  top: 10%;
  left: 5%;
  color: rgb(0, 0, 0);
  z-index: 10;
}

.car-details {
  display: flex;
  flex-direction: column;
  background-color: #f3e7d7d5;
  width: 80%;
  padding: 1rem;
  border-radius: 8px;
  margin-top: 20px;
}

.car-details h2 {
  font-size: 1.5rem;
  font-weight: 600;
}


.car-details button {
  text-decoration: none;
  height: 60px;
  padding: 10px 20px;
  margin-left: 1rem;
  margin-right: 1rem;
  margin-top: 1rem;
  border: none;
  outline: none;
  border-radius: 4px;
  background-color: #8f2917;
  color: rgb(255, 255, 255);
  transition: all 0.3s ease;
}

.car-details button:hover {
  background-color: #411e94;
  transition: all 0.3s ease;
  color: white;
}

/*Home*/

#home-grid {
  margin: 1rem;
}

#home-grid h2 {
  font-size: 2rem;
  margin-bottom: 4rem;
  font-weight: bold;
}



/*Cards*/

.reviews {
  margin-bottom: 2rem;
}

.reviews ul {
  list-style-position: inside;
}

.reviews li {
  margin-top: 1rem;
}

.upgrades {
  width: 100%;
}

.upgrade-grid {
  display: grid;
  gap: 1rem;
  grid-template-columns: 1fr 1fr;
  grid-template-rows: 1fr 1fr;
}

.upgrade-card {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.upgrade-card a {
  color: #4d27a5;
}

.upgrade-card a:hover {
  color: #000000;
}

.upgrade-box {
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: #e0ae6d;
  border-radius: 1rem;
  border: 3px solid #a77348;
  width: 100%;
  height: 150px;
  padding: 1rem;
  margin-bottom: 0.5rem;
}

footer {
  margin-top: 1rem;
  padding: 0.5rem;
}

/* Inventory View */

#inv-grid {
  margin: 1rem;
}

#inv-grid h1 {
  font-size: 2rem;
  margin-top: 1rem;
  margin-bottom: 1rem;
}

#inv-display {
  list-style: none;
  display: grid;
  grid-template-columns: 1fr;
  gap: 1rem;
}


#inv-display li {
  list-style: none;
  padding: 1rem;
  border: 1px solid gray;
  border-radius: 0.5rem;
  background-color: #eee;
  text-align: center;
}

#inv-display li h2 a {
  color: #583d19;
  font-size: 1.5rem;
  transition: all 0.5s ease-in-out;
}

#inv-display li h2 a:hover {
  color: #a84b0d;
  transform: scale(1.5);
}

#inv-display img {
  width: 150px;
  height: 150px;
  object-fit: cover;
  border-radius: 0.5rem;
}

/* Car Details View */

#detail-grid {
  margin: 1rem;
}

.vehicle-detail {
  background-color: #ececec;
  padding: 1.5rem;
  border-radius: 8px;
  box-shadow: 0 12px 6px rgba(0, 0, 0, 0.1);
  margin: 1rem auto;
  max-width: 1200px;
}

.action-box {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  gap: 2rem;
  justify-content: space-around;
}

.action-box button {
  padding: .5rem;
  color: white;
  background-color: #411e94;
  border: 2px solid #370e4e;
  border-radius: .5rem;
  flex-grow: 1;
  transition: all 0.3s ease;
}

.action-box button:nth-child(2) {
  color: #411e94;
  background-color: #c8b9eb;
  border: 2px solid #c8b9eb;
}

.action-box button:hover {
  transform: scale(1.1);
}

.vehicle-detail h1 {
  color: #8f2917;
  font-size: 2.5rem;
  margin-bottom: 1rem;
}

.summary-box h2 {
  font-size: 1.5rem;
  margin-bottom: 1rem;
}

.summary-box hr {
  margin-top: 1rem;
  margin-bottom: 1rem;
}

.summary-box {
  font-size: 1rem;
  margin-top: 1rem;
}

.summary-box p {
  margin-bottom: 0.5rem;
}

.summary-box strong {
  font-weight: bolder;
}

.vehicle-detail img {
  width: 100%;
  border-radius: 8px;
  object-fit: cover;
  max-height: 300px;
  margin-bottom: 1rem;
}

/* Error page main layout */
#error-main {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height: 65vh;
  text-align: center;
  padding: 1rem;
}

/* Style for the error title */
#error-main h2 {
  font-size: 3rem;
  font-weight: bold;
  margin-bottom: 1rem;
  color: #333;
}

/* Style for the error message */
#error-main h3 {
  font-size: 1.2rem;
  color: #666;
}

@media (min-width: 900px) {
  .home-box {
    max-width: 1200px;
    margin: 0 auto;
    padding: 2rem;
    border-radius: 1rem;
    border: 6px #865c26 solid;
    background-color: white;
  }

  #home-grid {
    display: grid;
    gap: 4rem;
    grid-template-columns: 1fr 1fr;
    margin: 2rem;
  }

  .hero h1 {
    font-size: 3rem;
  }

  .hero .car-details h2 {
    font-size: 3rem;
  }

  .hero .car-details p {
    font-size: 2.5rem;
  }

  .upgrades {
    grid-column: 1/2;
    grid-row: 1/2;
  }

  .reviews {
    grid-column: 2/3;
    grid-row: 1/2;
  }

  .reviews li {
    font-size: 1.5rem;
  }

  #home {
    background-image: url("../images/site/checkerboard.jpg");
    background-repeat: repeat;
    padding: 2rem 0;
  }

  .car-details button {
    margin-left: 2rem;
    margin-right: 2rem;
    margin-top: 2rem;
  }

  #inv-display {
    list-style: none;
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    gap: 1rem;
  }


  #inv-display li {
    list-style: none;
    padding: 1rem;
    border: 1px solid gray;
    border-radius: 0.5rem;
    background-color: #eee;
    text-align: center;
  }

  .vehicle-detail {
    display: grid;
    grid-template-columns: 2fr 1fr;
    gap: 1rem;
  }

  .summary-box {
    grid-column: 1/3;
    grid-row: 2/3;
    display: grid;
    gap: 1rem;
    grid-template-columns: 1fr 1fr;
  }

  .vehicle-detail h1 {
    font-size: 3rem;
  }

  .summary-box hr {
    display: none;
  }

  .characteristics-box,
  .description-box {
    padding: 1rem;
    background-color: #fafafa;
    border-radius: 8px;
    box-shadow: 0 12px 6px rgba(0, 0, 0, 0.1);
  }

  .characteristics-box {
    display: grid;
    grid-template-columns: 1fr 1fr;
    gap: 1rem;
  }

  .characteristics-box h2 {
    grid-column: 1/3;
  }

  #error-main h2 {
    font-size: 3rem;
  }

  #error-main h3 {
    font-size: 1.2rem;
  }

}

